--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <nav id="nav-menu" class="hidden absolute right-0 bg-fifth top-20 shadow-lg rounded-lg w-full lg:block md:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none transition duration-300 ease-in-out">
                         <ul class="block text-center w-full lg:flex">
                             <li class="group">
-                                <a href="beranda.html" class="text-base text-main py-2 mx-6 flex
+                                <a href="index.html" class="text-base text-main py-2 mx-6 flex
                                 group-hover:text-third font-bold">Beranda</a>
                             </li>
                             <li class="group">
